# src/express-server/expressServer.js
@@ -14,6 +14,7 @@ const session = require("express-session");
 const passport = require('./config/passport');
 const helmet = require('helmet');
 const rateLimit = require('express-rate-limit');
+const apiKeyAuth = require('./middleware/ApiKeyAuth');
 
 // Rate limit for API requests
 const limiter = rateLimit({
@@ -86,9 +87,11 @@ class ExpressServer {
 
     this.app.get('/hello', (req, res) => res.send(`Hello World. path: ${this.openApiPath}`));
     // Send the openapi document *AS GENERATED BY THE GENERATOR*
-    this.app.get('/openapi', (req, res) => res.sendFile((path.join(__dirname, 'api', 'openapi.yaml'))));
+    this.app.get('/openapi', (req, res) => res.sendFile(this.openApiPath));
     // View the openapi document in a visual interface. Should be able to test from this page
     this.app.use('/api-docs', swaggerUI.serve, swaggerUI.setup(this.schema));
+
+    this.app.use(apiKeyAuth);
 
     this.app.use(
       OpenApiValidator.middleware({
